--- a/Todo App/style.css
+++ b/Todo App/style.css
@@ -10,3 +10,258 @@ html {
   font-size: 62.5%;
   box-sizing: border-box;
 }
+
+body {
+  font-family: Poppins, sans-serif;
+  line-height: 1.7;
+  overflow: auto;
+}
+
+.container {
+  background-color: rgb(14, 4, 17);
+  width: 100%;
+  height: 100vh;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+}
+
+.background-image {
+  background-image: url(img/bg-desktop-dark.jpg);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 40%;
+  background-position: center;
+  background-size: auto;
+}
+
+.todo-app {
+  position: relative;
+  z-index: 2000;
+  height: 100%;
+  width: 40%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  gap: 4vh;
+  overflow: auto;
+  padding: 6rem 0;
+}
+
+.icon {
+  width: 3rem;
+  height: 3rem;
+  fill: #fff;
+}
+
+.todo-app__title {
+  width: 100%;
+  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1rem;
+}
+
+.heading--1 {
+  color: #fff;
+  font-size: 2rem;
+}
+
+.todo-app__title-name {
+  color: rgb(189, 189, 189);
+}
+
+.todo-app__title-name:focus {
+  outline: 0.2rem solid red;
+}
+
+.btn {
+  background-color: transparent;
+  /* border: 0; */
+  cursor: pointer;
+}
+
+.btn__title {
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.todo-app__container {
+  width: 100%;
+}
+
+.todo-app__category {
+  text-align: left;
+  margin-bottom: 2rem;
+}
+
+.heading--4 {
+  font-size: 1.5rem;
+  color: #fff;
+  margin-bottom: 0.5rem;
+}
+
+.todo-app__category-group {
+  display: flex;
+  gap: 2vw;
+}
+
+.todo-app__label {
+  width: 50%;
+  height: 8rem;
+  padding: 2rem;
+  background-color: #fff;
+  border-radius: 0.4rem;
+  font-size: 1.5rem;
+  text-transform: capitalize;
+  color: gray;
+  cursor: pointer;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1vh;
+}
+
+.todo-app__category-radio {
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 100%;
+  position: relative;
+}
+
+.todo-app__category-radio::before {
+  content: "";
+  display: inline-block;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.2s linear;
+}
+
+.todo-app__radio-group {
+  display: none;
+}
+
+.todo-app__radio-group:checked ~ .todo-app__category-radio::before {
+  opacity: 1;
+  visibility: visible;
+}
+
+.todo-app__category-radio--business {
+  border: 0.2rem solid #fbdb89;
+}
+
+.todo-app__category-radio--business::before {
+  background-image: linear-gradient(to right bottom, #f38e82, #f48982);
+}
+
+.todo-app__category-radio--personal {
+  border: 0.2rem solid #615551;
+}
+
+.todo-app__category-radio--personal::before {
+  background-image: linear-gradient(to right bottom, #d3c7c3, #918581);
+}
+
+.todo-app__search {
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  background-color: rgb(50, 4, 64);
+  margin-bottom: 1.5rem;
+  border-radius: 0.3rem;
+}
+
+.todo-app__check-box {
+  display: inline-block;
+  width: 2rem;
+  height: 2rem;
+  border: 0.1rem solid #ffffff73;
+  border-radius: 100%;
+  margin-right: 1rem;
+}
+
+.todo-app__input {
+  width: 100%;
+  font-family: inherit;
+  background-color: transparent;
+  border: 0;
+  color: #fff;
+  caret-color: blueviolet;
+}
+
+.todo-app__input::placeholder {
+  color: #ffffffaf;
+}
+
+.todo-app__input:focus {
+  outline: none;
+}
+
+.todo-app__list {
+  /* height: 30vh; */
+  overflow: auto;
+  background-color: rgb(50, 4, 64);
+  border-radius: 0.2rem;
+  padding: 1rem;
+}
+
+.todo-app__item {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.todo-app__label-btn {
+  width: 3rem;
+  height: 3rem;
+  border: 0.1rem solid #ffffff73;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.todo-app__radio-btn {
+  width: 3rem;
+  height: 3rem;
+  background-color: blue;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.todo-app__radio-icon {
+  width: 2rem;
+  height: 2rem;
+}
+
+.todo-app__radio {
+  display: none;
+}
+
+.todo-app__radio:checked ~ .todo-app__radio-btn {
+  opacity: 1;
+  visibility: visible;
+}
