--- a/Todo App/style.css
+++ b/Todo App/style.css
@@ -47,7 +47,7 @@ html {
 }
 
 body {
-  font-family: Poppins, sans-serif;
+  font-family: "Poppins", sans-serif;
   line-height: 1.7;
   overflow: auto;
 }
