--- a/Form Validation/style.css
+++ b/Form Validation/style.css
@@ -10,15 +10,183 @@ html {
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
   line-height: 1.7;
 }
 
 .container {
-  background-image: url(img/snow4.webp);
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  background-image: url(img/snow4.webp);
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.main {
+  width: 35%;
+  margin: 3rem 0;
+  background-color: #fff;
+  border-radius: 0.5rem;
+  padding: 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3rem;
+  overflow: hidden;
+}
+
+.btn {
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+}
+
+.btn:focus {
+  outline: none;
+}
+
+.btn__container {
+  background-color: #fff;
+  border-radius: 3rem;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+  height: 5rem;
+  width: 30rem;
+  display: flex;
+  position: relative;
+}
+
+.background-color {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 15rem;
+  height: 100%;
+  background-image: linear-gradient(to bottom right, #ff512f, #dd2476);
+  z-index: 100;
+  border-radius: 3rem;
+  transition: transform 0.3s linear;
+}
+
+.btn--form {
+  width: 15rem;
+  font-size: 1.5rem;
+  z-index: 1000;
+}
+
+.form__control {
+  display: flex;
+  align-items: center;
+}
+
+.btn--show {
+  margin-left: -3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 1.2rem;
+  overflow: hidden;
+}
+
+.fonts__container {
+  display: flex;
+  gap: 2rem;
+}
+
+.fonts {
+  width: 2rem;
+  height: 2rem;
+}
+
+.fonts--white {
+  fill: #fff;
+}
+
+.fonts__link {
+  text-decoration: none;
+  display: inline-block;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 100%;
+  background-image: linear-gradient(to bottom right, #ff512f, #dd2476);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form__container {
+  width: 100%;
+  display: grid;
+}
+
+.form__details {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.3s linear;
+}
+
+.form__input-group {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.form__input {
+  border: 0;
+  border-bottom: 2px solid black;
+  padding: 1rem 0;
+  width: 100%;
+  font-family: inherit;
+  font-size: 1.5rem;
+}
+
+.form__input:focus {
+  outline: none;
+}
+
+.btn--submit {
+  width: 70%;
+  margin: 0 auto;
+  padding: 1rem 0;
+  border-radius: 3rem;
+  font-size: 1.5rem;
+  color: #fff;
+  background-image: linear-gradient(to bottom right, #ff512f, #dd2476);
+}
+
+.form__login {
+  grid-row: 1 / 2;
+  grid-column: 1 / 2;
+}
+
+.form__registration {
+  grid-row: 1 /2;
+  grid-column: 1 /2;
+  transform: translateX(120%);
+}
+
+.error-message {
+  color: red;
+  font-size: 1.3rem;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.error {
+  border-bottom: 0.2rem solid red;
+}
+
+.success {
+  border-bottom: 0.2rem solid green;
+}
+
+.visible {
+  opacity: 1;
+  visibility: visible;
 }
