--- a/Audio player/style.css
+++ b/Audio player/style.css
@@ -9,6 +9,13 @@ html {
   box-sizing: border-box;
 }
 
+/* convert 1em equal 16px, 330px / 16 = 20.625em  */
+@media only screen and (max-width: 20.625em) {
+  html {
+    font-size: 50%;
+  }
+}
+
 body {
   height: 100vh;
   background-image: linear-gradient(
@@ -40,9 +47,40 @@ body {
   position: relative;
 }
 
+/* convert 1em equal 16px, 500px / 16 = 31.25em  */
+@media only screen and (max-width: 31.25em) {
+  .music__audio-container {
+    width: 37rem;
+  }
+}
+
+/* convert 1em equal 16px, 390px / 16 = 25em  */
+@media only screen and (max-width: 25em) {
+  .music__audio-container {
+    width: 32rem;
+  }
+}
+
+/* convert 1em equal 16px, 265px / 16 = 16.5625em  */
+@media only screen and (max-width: 16.5625em) {
+  .music__audio-container {
+    width: 30rem;
+  }
+}
+
 .music__audio__img-container {
   width: 11rem;
   height: 11rem;
+  position: relative;
+  z-index: 100;
+}
+
+/* convert 1em equal 16px, 500px / 16 = 31.25em  */
+@media only screen and (max-width: 31.25em) {
+  .music__audio__img-container {
+    width: 8rem;
+    height: 8rem;
+  }
 }
 
 .music__audio__img-container {
@@ -56,6 +94,21 @@ body {
   padding: 0 3rem;
 }
 
+/* convert 1em equal 16px, 400px / 16 = 25em  */
+@media only screen and (max-width: 25em) {
+  .music__audio-content {
+    gap: 2rem;
+    padding: 0 1.5rem;
+  }
+}
+
+/* convert 1em equal 16px, 265px / 16 = 16.5625em  */
+@media only screen and (max-width: 16.5625em) {
+  .music__audio-content {
+    justify-content: center;
+  }
+}
+
 .music__audio__img {
   width: 100%;
   height: 100%;
@@ -66,6 +119,13 @@ body {
 .music__controls {
   display: flex;
   gap: 4rem;
+}
+
+/* convert 1em equal 16px, 400px / 16 = 25em  */
+@media only screen and (max-width: 25em) {
+  .music__controls {
+    gap: 2rem;
+  }
 }
 
 .btn {
@@ -100,8 +160,8 @@ body {
   top: 0;
   width: 100%;
   transform: translateY(-100%);
-  z-index: -1;
-  transition: all 0.3s ease;
+  z-index: 50;
+  transition: all 0.4s ease;
 }
 
 .music__progressbar-content {
@@ -127,6 +187,7 @@ body {
   width: 100%;
   height: 0.5rem;
   background-color: #fff;
+  cursor: pointer;
 }
 
 .music__progressbar {
@@ -157,7 +218,7 @@ body {
 }
 
 .rotate {
-  animation: rotate 1s linear infinite;
+  animation: rotate 2s linear infinite;
 }
 
 @keyframes rotate {
