--- a/Memory card/style.css
+++ b/Memory card/style.css
@@ -308,6 +308,35 @@ body,
   }
 }
 
+.error-message {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  transition: top 0.4s ease;
+}
+
+.message {
+  color: #fff;
+  background-color: #1877f2;
+  font-size: 1.8rem;
+  padding: 1.5rem;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+/* convert 1em equal 16px, 300px / 16 = 18.75em  */
+@media only screen and (max-width: 18.75em) {
+  .message {
+    width: 95%;
+    margin: 0 auto;
+  }
+}
+
 .footer {
   font-size: 1.8rem;
   position: absolute;
@@ -316,9 +345,14 @@ body,
   width: 100%;
 }
 
+/* this classes are used in javascript to manipulate element */
 .hidden {
   opacity: 0;
   display: none;
+}
+
+.hide-error-message {
+  top: -100%;
 }
 
 .card-front-hidden {
